Fix jittery title due to word wrap

--- a/plugins/nodebb-plugin-tdwtf-customizations/holiday.less
+++ b/plugins/nodebb-plugin-tdwtf-customizations/holiday.less
@@ -78,6 +78,7 @@ html[data-current-month="4"][data-current-day-of-month="1"]:not([data-user-id="1
 			position: absolute;
 			height: 100%;
 			top: 0;
+			white-space: nowrap;
 		}
 	}
 
